# S-Protect-PY

./: .gitattributes  .gitignore  CONTEXT.md  LICENSE  README.md  _check_loader.py  _find_bad_brace.py  _fix_boot2.py  _fix_fstring.py  _fix_gen_loader.py  _run_output.txt  _run_test.py  _test2.py  _test3.py  _test_crypto.py  _test_flow.py  _test_loader_minify.py  _test_minify.py  main.py  output.spec  pyproject.toml  requirements.txt  run_tests.bat  sprotect.bat  sprotect.json5
.b4f36a48/: 0cbb4b8c.raw  0ecc1372.cfg  14d08ff7.old  2942ac6d.cfg  2cb0f016.cache  31c65dea.part  37af34f1.part  46fa495c.idx  4a2d111c.res  4c687b0a.enc  512868e5.idx  5e38df18.cache  80458b48.cfg  81611ba1.cache  90c1caba.part  97d78a99.blob  a0dca68a.enc  a0e14d14.map  b38aa23c.cache  b5c411a7.enc  b9c07628.idx  baefa046.cfg  bf55054c.idx  c79c2e56.blob  c99f6297.part  ca93ffc2.blob  cf840d84.sig  d0f66d13.sig  dc6a139a.old  debce404.seg  e1842201.sig  efb52829.map
_test_output/: main.py  report.html  report.md
docs/: cli.md  config.md  examples.md  features.md  index.md  quickstart.md
output/: .gitignore  main.py  report.html  report.md  requirements.txt  run.bat  watermark_report.json
project/: README.md  config.py  core_crypto.py  core_math.py  core_verify.py  envtest.py  envtest.py.sprotect.json5  main.py  report.html  report.md  reporter.py  sprotect.json5  tester.py  utils.py  utils_data.py  utils_report.py
sprotect/: __init__.py  __main__.py  anti_debug.py  anti_debug.py.sprotect.json5  anti_tamper.py  anti_tamper.py.sprotect.json5  backup.py  backup.py.sprotect.json5  bytecode_protect.py  bytecode_protect.py.sprotect.json5  cli.py  cli.py.sprotect.json5  compressor.json5  compressor.py  config.py  config.py.sprotect.json5  (+34 more)
(+98 files in other folders)
