[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sprotect"
version = "1.0.0"
description = "Python code protection toolkit — obfuscate, encrypt, and secure your Python applications"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "stop666two" }]
requires-python = ">=3.11"
dependencies = [
    "json5>=0.9.14",
    "cryptography>=44.0.0",
    "pycryptodome>=3.21.0",
    "blake3>=1.0.4",
    "msgpack>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "test_*_*"]
filterwarnings = ["ignore::DeprecationWarning"]
log_cli_level = "INFO"

[tool.coverage.run]
source = ["sprotect"]
omit = ["sprotect/__main__.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "except:",
    "except Exception:",
    "except BaseException:",
]
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "BLE"]
ignore = ["E501", "E731", "S101", "S311"]

[tool.ruff.format]
quote-style = "double"
indent-width = 4

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_unused_ignores = true
